--- a/lib/drop_alley_web/templates/layout/torch.html.eex
+++ b/lib/drop_alley_web/templates/layout/torch.html.eex
@@ -33,6 +33,7 @@
             <a href="/admin/return_consumers">Consumer</a>
             <a href="/admin/retailers">Retailer</a>
             <a href="/admin/partners">Partner</a>
+            <a href="/admin/orders">Order</a>
           </nav>
         </div>
       </section>
