Added partner and product association with bucket

--- a/lib/drop_alley_web/templates/layout/torch.html.eex
+++ b/lib/drop_alley_web/templates/layout/torch.html.eex
@@ -35,6 +35,7 @@
             <a href="/admin/partners">Partner</a>
             <a href="/admin/orders">Order</a>
             <a href="/admin/carts">Cart</a>
+            <a href="/admin/buckets">Bucket</a>
           </nav>
         </div>
       </section>
