--- a/lib/drop_alley_web/templates/product/form.html.eex
+++ b/lib/drop_alley_web/templates/product/form.html.eex
@@ -42,6 +42,12 @@
       <%= text_input f, :retailer_id, class: "form-control" %>
       <%= error_tag f, :retailer_id %>
     </div>
+
+    <div class=”form-group”>
+      <%= label f, :image, class: "control-label" %>
+      <%= file_input f, :image, class: "form-control" %>
+      <%= error_tag f, :image %>
+    </div>
   
     <div class="torch-submit-form">
       <%= submit "Submit", class: "torch-submit-button" %>
