--- a/lib/drop_alley_web/templates/layout/product.html.eex
+++ b/lib/drop_alley_web/templates/layout/product.html.eex
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="apple-touch-icon" href="touch-icon-iphone.png">
     <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
@@ -15,15 +15,15 @@
     <title>Grupo Bravo - Try & Buy Shopping</title>
 
     <!-- Required css -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Plugins css -->
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/nouislider.min.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
+    <link rel="stylesheet" href="/css/nouislider.min.css">
 
     <!-- Template css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
 
@@ -63,13 +63,13 @@
           </div>
           <div class="col-4 col-md-auto d-flex align-items-center justify-content-center justify-content-md-start">
             <a href="https://gbbravo.com" class="logo">
-              <img src="img/grupologo.png" alt="GrupoBravo" class="d-none d-md-block">
-              <img src="img/grupologo.png" alt="GrupoBravo" class="d-block d-md-none">
+              <img src="/img/grupologo.png" alt="GrupoBravo" class="d-none d-md-block">
+              <img src="/img/grupologo.png" alt="GrupoBravo" class="d-block d-md-none">
             </a>
           </div>
           <div class="col d-none d-md-block position-static">
             <nav class="navbar nav main-nav justify-content-center justify-content-md-start position-static p-0">
-              <a class="nav-link" href="index.html">HOME</a>
+              <a class="nav-link" href="/products">HOME</a>
               <a class="nav-link" href="https://gbbravo.com/tiendas" target="_blank">STORES</a>              
             </nav>
           </div>
@@ -88,9 +88,6 @@
       </div>
     </div>
 
-    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-
     <main role="main">
       <%= render @view_module, @view_template, assigns %>
     </main>
@@ -100,7 +97,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="menuModalLabel">
-              <a href="https://gbbravo.com" class="d-inline-block"><img src="img/grupologo.png" alt="Mimity" height="35"></a>
+              <a href="https://gbbravo.com" class="d-inline-block"><img src="/img/grupologo.png" alt="Mimity" height="35"></a>
             </h5>
             <button type="buttonhttps://gbbravo.com" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -128,7 +125,7 @@
           </div>
           <div class="modal-body">
             <div class="media">
-              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="img/product/polo1-small.jpg" width="70" alt="Generic placeholder image"></a>
+              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="/img/product/polo1-small.jpg" width="70" alt="Generic placeholder image"></a>
               <div class="media-body">
                 <div><a href="detail.html" class="text-dark">Burberry The Plymouth Duffle Coat</a></div>
                 <span class="text-secondary"><span class="mr-3">x1</span>$50.00</span>
@@ -136,7 +133,7 @@
               </div>
             </div>
             <div class="media">
-              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="img/product/polo2-small.jpg" width="70" alt="Generic placeholder image"></a>
+              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="/img/product/polo2-small.jpg" width="70" alt="Generic placeholder image"></a>
               <div class="media-body">
                 <div><a href="detail.html" class="text-dark">Fendi Bugs Sweater</a></div>
                 <span class="text-secondary"><span class="mr-3">x1</span>$50.00</span>
@@ -144,7 +141,7 @@
               </div>
             </div>
             <div class="media">
-              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="img/product/polo3-small.jpg" width="70" alt="Generic placeholder image"></a>
+              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="/img/product/polo3-small.jpg" width="70" alt="Generic placeholder image"></a>
               <div class="media-body">
                 <div><a href="detail.html" class="text-dark">Alexander McQueen Classic Piqué Polo Shirt</a></div>
                 <span class="text-secondary"><span class="mr-3">x1</span>$50.00</span>
@@ -152,7 +149,7 @@
               </div>
             </div>
             <div class="media">
-              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="img/product/polo4-small.jpg" width="70" alt="Generic placeholder image"></a>
+              <a href="detail.html" class="mr-2"><img class="img-fluid rounded" src="/img/product/polo4-small.jpg" width="70" alt="Generic placeholder image"></a>
               <div class="media-body">
                 <div><a href="detail.html" class="text-dark">MCQ Alexander McQueen Swallow Badge Polo Shirt</a></div>
                 <span class="text-secondary"><span class="mr-3">x1</span>$50.00</span>
@@ -221,9 +218,9 @@
                 <div class="col col-sm-6">
                   <div class="swiper-container" id="quickview-slider">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="img/product/polo1.jpg" alt="image" class="w-100"></div>
-                      <div class="swiper-slide"><img src="img/product/polo2.jpg" alt="image" class="w-100"></div>
-                      <div class="swiper-slide"><img src="img/product/polo3.jpg" alt="image" class="w-100"></div>
+                      <div class="swiper-slide"><img src="/img/product/polo1.jpg" alt="image" class="w-100"></div>
+                      <div class="swiper-slide"><img src="/img/product/polo2.jpg" alt="image" class="w-100"></div>
+                      <div class="swiper-slide"><img src="/img/product/polo3.jpg" alt="image" class="w-100"></div>
                     </div>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button-prev d-none d-sm-flex" id="quickview-prev"><i class="material-icons md-3">keyboard_arrow_left</i></div>
