--- a/lib/drop_alley_web/templates/product/product_checkout.html.eex
+++ b/lib/drop_alley_web/templates/product/product_checkout.html.eex
@@ -1,54 +1,68 @@
-<div class="container-fluid limited mb-5">
-    <div class="row">
-    <div class="col-sm-12 col-md-8 offset-md-2">
-        <h4>Shipping Address</h4>
-        <hr>
-        <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputFirstName">First Name *</label>
-            <input type="text" class="form-control" id="inputFirstName">
+<%= form_for @conn, DropAlleyWeb.Router.Helpers.book_order_path(@conn, :book_order, @product), [as: :order], fn f -> %>
+    <div class="container-fluid limited mb-5">
+        <div class="row">
+        <div class="col-sm-12 col-md-8 offset-md-2">
+            <h4>Shipping Address</h4>
+            <hr>
+            <div class="form-row">
+            <div class="form-group col-md-6">
+                <%= label f, :first_name, class: "control-label" %>
+                <%= text_input f, :first_name, class: "form-control" %>
+                <%= error_tag f, :first_name %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :last_name, class: "control-label" %>
+                <%= text_input f, :last_name, class: "form-control" %>
+                <%= error_tag f, :last_name %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :addr, class: "control-label" %>
+                <%= text_input f, :addr, class: "form-control" %>
+                <%= error_tag f, :addr %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :street, class: "control-label" %>
+                <%= text_input f, :street, class: "form-control" %>
+                <%= error_tag f, :street %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :country, class: "control-label" %>
+                <%= text_input f, :country, class: "form-control" %>
+                <%= error_tag f, :country %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :pincode, class: "control-label" %>
+                <%= text_input f, :pincode, class: "form-control" %>
+                <%= error_tag f, :pincode %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :city, class: "control-label" %>
+                <%= text_input f, :city, class: "form-control" %>
+                <%= error_tag f, :city %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :state, class: "control-label" %>
+                <%= text_input f, :state, class: "form-control" %>
+                <%= error_tag f, :state %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :contact_no, class: "control-label" %>
+                <%= text_input f, :contact_no, class: "form-control" %>
+                <%= error_tag f, :contact_no %>
+            </div>
+            <div class="form-group col-md-6">
+                <%= label f, :email, class: "control-label" %>
+                <%= text_input f, :email, class: "form-control" %>
+                <%= error_tag f, :email %>
+            </div>
+            <div class="form-group col-12 text-right">
+                <%= submit class: "btn btn-theme"  do %>
+                    Try & Buy<i class="material-icons">arrow_forward</i>
+                <% end %>
+            </div>
+            </div>
         </div>
-        <div class="form-group col-md-6">
-            <label for="inputLastName">Last Name *</label>
-            <input type="text" class="form-control" id="inputLastName">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputAddress">Address Line 1 *</label>
-            <input type="text" class="form-control" id="inputAddress">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputAddress2">Address Line 2 (optional)</label>
-            <input type="text" class="form-control" id="inputAddress2">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputCountry">Country *</label>
-            <input type="text" class="form-control" id="inputCountry">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputZip">Zip/Postal Code *</label>
-            <input type="text" class="form-control" id="inputZip">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputCity">City *</label>
-            <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputRegion">Region *</label>
-            <input type="text" class="form-control" id="inputRegion">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputPhone">Phone Number *</label>
-            <input type="text" class="form-control" id="inputPhone">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputEmail">Email Address *</label>
-            <input type="email" class="form-control" id="inputEmail">
-        </div>
-        <div class="form-group col-12 text-right">
-            <a class="btn btn-theme" href="#" role="button">Try & Buy<i class="material-icons">arrow_forward</i></a>
-        </div>
+        
         </div>
     </div>
-    
-    </div>
-</div>
+<% end %>
