Added Bulk Import in product

--- a/lib/drop_alley_web/templates/product/index.html.eex
+++ b/lib/drop_alley_web/templates/product/index.html.eex
@@ -1,6 +1,7 @@
 <section id="torch-toolbar">
   <div class="torch-container">
     <%= link "New Product", to: DropAlleyWeb.Router.Helpers.product_path(@conn, :new) %>
+    <%= link "Import Bulk", to: DropAlleyWeb.Router.Helpers.import_product_path(@conn, :import) %>
   </div>
 </section>
 <section id="torch-index-content">
