--- a/lib/drop_alley_web/templates/product/product_index.html.eex
+++ b/lib/drop_alley_web/templates/product/product_index.html.eex
@@ -146,15 +146,15 @@
         <div class="col-12">
           <nav aria-label="Product Listing Page" class="d-flex justify-content-center mt-3">
             <ul class="pagination">
-              <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&laquo;</a></li>
+              <li class="page-item"><a class="page-link" href="?page=1" tabindex="-1">&laquo;</a></li>
               <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">&lsaquo;</a></li>
-              <li class="page-item active"><span class="page-link">1</span></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <%= for i <- (1..assigns.total_pages) do %>
+                <li class="page-item <%= if i==assigns.page_number, do: 'active'%>"><a class="page-link" href="?page=<%= i %>"><%= i %></a></li>
+              <% end %>
               <li class="page-item"><a class="page-link" href="#">&rsaquo;</a></li>
-              <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+              <li class="page-item"><a class="page-link" href="?page=<%= assigns.total_pages %>">&raquo;</a></li>
             </ul>
-          </nav>
+          </nav> 
         </div>
       </div>
     </div>
