--- a/lib/drop_alley_web/templates/layout/product.html.eex
+++ b/lib/drop_alley_web/templates/layout/product.html.eex
@@ -69,8 +69,8 @@
           </div>
           <div class="col d-none d-md-block position-static">
             <nav class="navbar nav main-nav justify-content-center justify-content-md-start position-static p-0">
-              <a class="nav-link" href="/products">HOME</a>
-              <a class="nav-link" href="https://gbbravo.com/tiendas" target="_blank">STORES</a>              
+              <a class="nav-link" href="/products">INICIO</a>
+              <a class="nav-link" href="https://gbbravo.com/tiendas" target="_blank">TIENDAS</a>              
             </nav>
           </div>
 
@@ -82,7 +82,7 @@
       <div class="container-fluid limited">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item">Try & Buy Shopping</li>
+            <li class="breadcrumb-item">COMPRAS DE TRY & BUY</li>
           </ol>
         </nav>
       </div>
@@ -302,21 +302,18 @@
       <div class="container-fluid limited">
         <div class="row">
           <div class="col-6 col-lg-3">
-            <h6>Shop</h6>
+            <h6>Tienda</h6>
             <div class="list-group list-group-flush">
-              <a href="contact.html" class="list-group-item list-group-item-action">Help / Support</a>
-              <a href="about.html" class="list-group-item list-group-item-action">About Us</a>
-              <a href="faq.html" class="list-group-item list-group-item-action">FAQ</a>
-              <a href="#" class="list-group-item list-group-item-action">Coupons</a>
+              <a href="https://gbbravo.com/content/9-que-es-gbbravo" target="_blank" class="list-group-item list-group-item-action">¿Qué es gbbravo.com?</a>
+              <a href="https://gbbravo.com/content/6-preguntas-frecuentes" target="_blank" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
             </div>
           </div>
           <div class="col-6 col-lg-3">
-            <h6>Our Policies</h6>
+            <h6>Nuestras Politicas</h6>
             <div class="list-group list-group-flush">
-              <a href="#" class="list-group-item list-group-item-action">Terms &amp; Conditions</a>
-              <a href="#" class="list-group-item list-group-item-action">Privacy Policy</a>
-              <a href="#" class="list-group-item list-group-item-action">Payment Method</a>
-              <a href="#" class="list-group-item list-group-item-action">Shipping Method</a>
+              <a href="https://gbbravo.com/content/2-privacidad" class="list-group-item list-group-item-action">Política de privacidad</a>
+              <a href="https://gbbravo.com/" class="list-group-item list-group-item-action">GB Bravo</a>
+              
             </div>
           </div>
           
