--- a/lib/drop_alley_web/templates/product/product_checkout.html.eex
+++ b/lib/drop_alley_web/templates/product/product_checkout.html.eex
@@ -2,7 +2,7 @@
     <div class="container-fluid limited mb-5">
         <div class="row">
         <div class="col-sm-12 col-md-8 offset-md-2">
-            <h4>Shipping Address</h4>
+            <h4>Dirección De Try & Buy</h4>
             <hr>
             <div class="form-row">
             <%= hidden_input f, :size, class: "form-control", value: @conn.params["size"] %>
