--- a/lib/drop_alley_web/templates/product/product_show.html.eex
+++ b/lib/drop_alley_web/templates/product/product_show.html.eex
@@ -84,6 +84,9 @@
         <li class="nav-item">
             <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#detail" role="tab" aria-controls="detail" aria-selected="false">Detalle</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#sizechart" role="tab" aria-controls="detail" aria-selected="false">Guia de tallas</a>
+        </li>
         <!--
         <li class="nav-item">
             <a class="nav-link text-secondary" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review" aria-selected="false">Reviews (<%#= @product.product_reviews |> length %>)</a>
@@ -104,6 +107,79 @@
                 </tr>
                 <% end %>
                 
+            </tbody>
+            </table>
+        </div>
+        <div class="tab-pane border border-top-0 p-3" id="sizechart" role="tabpanel" aria-labelledby="sizechart">
+            <table class="table table-bordered mb-0 table-sm">
+            <tbody>
+                <tr>   
+                    <td>EU</td>
+                    <td>36</td>
+                    <td>36.5</td>
+                    <td>37</td>
+                    <td>37.5</td>
+                    <td>38</td>
+                    <td>38.5</td>
+                    <td>39</td>
+                    <td>40</td>
+                    <td>41</td>
+                    <td>41.5</td>
+                    <td>42</td>
+                    <td>42.5</td>
+                    <td>43</td>
+                    <td>44</td>
+                    <td>45</td>
+                    <td>45.5</td>
+                    <td>46</td>
+                    <td>46.5</td>
+                    <td>47</td>
+                </tr>
+                <tr>   
+                    <td>UK</td>
+                    <td>3</td>
+                    <td>3.5</td>
+                    <td>4</td>
+                    <td>4.5</td>
+                    <td>5</td>
+                    <td>5.5</td>
+                    <td>6</td>
+                    <td>6.5</td>
+                    <td>7</td>
+                    <td>7.5</td>
+                    <td>8</td>
+                    <td>8.5</td>
+                    <td>9</td>
+                    <td>9.5</td>
+                    <td>10</td>
+                    <td>10.5</td>
+                    <td>11</td>
+                    <td>11.5</td>
+                    <td>12</td>
+                </tr>
+                <tr>   
+                    <td>Clarks.es</td>
+                    <td>35.5</td>
+                    <td>36</td>
+                    <td>37</td>
+                    <td>37.5</td>
+                    <td>38</td>
+                    <td>39</td>
+                    <td>39.5</td>
+                    <td>40</td>
+                    <td>41</td>
+                    <td>41.5</td>
+                    <td>42</td>
+                    <td>42.5</td>
+                    <td>43</td>
+                    <td>44</td>
+                    <td>44.5</td>
+                    <td>45</td>
+                    <td>46</td>
+                    <td>46.5</td>
+                    <td>47</td>
+                </tr>
+
             </tbody>
             </table>
         </div>
