Add Facebook Pixel code to <head> of layout > product.html.eex. Update text in layout > product.html.eex. Update text in product > product_index.html.eex.

--- a/lib/drop_alley_web/templates/layout/product.html.eex
+++ b/lib/drop_alley_web/templates/layout/product.html.eex
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
-    <title>Grupo Bravo - Try & Buy Shopping</title>
+    <title>Grupo GB Bravo - Try & Buy Shopping</title>
 
     <!-- Required css -->
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
@@ -24,6 +24,30 @@
 
     <!-- Template css -->
     <link rel="stylesheet" href="/css/style.css">
+
+    <!-- Facebook Pixel Code -->
+    
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1957636767898964');
+    fbq('track', 'PageView');
+  </script>
+
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/r?id=1957636767898964&ev=PageView&noscript=1"/></noscript>
+
+<!-- End Facebook Pixel Code -->
+
+
+
+
+
   </head>
   <body>
 
@@ -325,7 +349,7 @@
 
     <!-- Copyright -->
     <div class="copyright">
-      Copyright © 2018 GrupoBravo All right reserved
+      Copyright © 2018 Grupo GB Bravo All right reserved
     </div>
     <!-- /Copyright -->
 
