--- a/lib/drop_alley_web/templates/product/product_show.html.eex
+++ b/lib/drop_alley_web/templates/product/product_show.html.eex
@@ -6,17 +6,31 @@
     <div class="col-xl-4 col-lg-5 col-md-6">
         <div class="swiper-container border rounded mb-2" id="detail-slider">
         <div class="swiper-wrapper">
-            <%= for pi <- @product.product_images do %>
-                <div class="swiper-slide"><img src="<%= DropAlley.ProductImageUploader.url({pi.image, pi})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+            <%= case @product.product_images do %>
+                <% nil -> %>
+                    <div class="swiper-slide"><img src="<%= DropAlley.ImageUploader.url({@product.image, @product})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+                <% [] -> %>
+                    <div class="swiper-slide"><img src="<%= DropAlley.ImageUploader.url({@product.image, @product})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+                <% _ -> %>
+                <%= for pi <- @product.product_images do %>
+                    <div class="swiper-slide"><img src="<%= DropAlley.ProductImageUploader.url({pi.image, pi})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+                <% end %>
             <% end %>
         </div>
         <a href="#zoom" class="btn-zoom"><i class="material-icons md-2">zoom_in</i></a>
         </div>
         <div class="swiper-container detail-gallery mb-2" id="detail-gallery">
         <div class="swiper-wrapper">
-            <%= for pi <- @product.product_images do %>
-                <div class="swiper-slide"><a href="#"><img src="<%= DropAlley.ProductImageUploader.url({pi.image, pi})%>" alt="Product" class="img-thumbnail"></a></div>
-            <% end %>
+            <%= case @product.product_images do %>
+                <% nil -> %>
+                    <div class="swiper-slide"><img src="<%= DropAlley.ImageUploader.url({@product.image, @product})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+                <% [] -> %>
+                    <div class="swiper-slide"><img src="<%= DropAlley.ImageUploader.url({@product.image, @product})%>" class="w-100" data-width="1025" data-height="1400" alt="Product"></div>
+                <% _ -> %>
+                <%= for pi <- @product.product_images do %>
+                    <div class="swiper-slide"><a href="#"><img src="<%= DropAlley.ProductImageUploader.url({pi.image, pi})%>" alt="Product" class="img-thumbnail"></a></div>
+                <% end %>
+            <% end  %>
         </div>
         <div class="swiper-button-prev" id="detail-gallery-prev"><i class="material-icons md-3">keyboard_arrow_left</i></div>
         <div class="swiper-button-next" id="detail-gallery-next"><i class="material-icons md-3">keyboard_arrow_right</i></div>
@@ -31,7 +45,7 @@
             <td class="border-top-0" colspan="2"><h5><%= @product.name %></h5></td>
             </tr>
             <tr>
-            <td>Precio</td>
+            <td>Price</td>
             <td>
                 <ul class="list-inline mb-0">
                 <li class="list-inline-item"><span class="text-theme h5">€<%= @product.price %></span></li>
@@ -41,7 +55,7 @@
             </td>
             </tr>
             <tr>
-            <td>Disponibilidad</td>
+            <td>Availability</td>
             <td>
                 <%= if DropAlley.Store.in_stock?(@product.id) do %>
                     <span class="badge badge-success">in stock</span>
@@ -51,13 +65,18 @@
             </td>
             </tr>
             <tr>
-            <td class="align-middle">Talla</td>
+            <td class="align-middle">Size</td>
             <td>
                 <div class="row">
                 <div class="col-5 col-sm-3 col-md-6 col-lg-3 col-xl-2">
                     <select name="size" id="product-size" class="custom-select custom-select-sm">
-                    <%= for size <- @product.sizes do %>
-                        <option value="<%= size %>"><%= size %></option>
+                    <% case @product.sizes do %>
+                    <% nil -> %>
+                    <% [] -> %>
+                    <% _ -> %>
+                        <%= for size <- @product.sizes do %>
+                            <option value="<%= size %>"><%= size %></option>
+                        <% end %>
                     <% end %>
                     </select>
                 </div>
@@ -68,24 +87,31 @@
         </tbody>
         </table>
         
-        
+        <!--
         <div class="col-md-4 col-sm-4" offset-col-sm-2>
             <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                <a href="#" id="trynbuy" data-val= <%= @product.id %> ><button type="button" class="btn btn-theme">TRY & BUY</button></a>     </div> 
-            </div>  
-        
+                <a href="#" id="trynbuy" data-val= <%#= @product.id %> ><button type="button" class="btn btn-theme">TRY & BUY</button></a>    
+            </div> 
+        </div>  
+        -->
+
+        <div class="col-md-4 col-sm-4" offset-col-sm-2>
+            <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                <a href="<%= DropAlley.ImageUploader.url({@product.image, @product})%>" id="trynbuy1" download ><button type="button" class="btn btn-theme">Download</button></a>    
+            </div> 
+        </div> 
         <br>
                 
         
         <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-            <a class="nav-link text-secondary active" id="desc-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Descripción</a>
+            <a class="nav-link text-secondary active" id="desc-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Description</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#detail" role="tab" aria-controls="detail" aria-selected="false">Detalle</a>
+            <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#detail" role="tab" aria-controls="detail" aria-selected="false">Detail</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#sizechart" role="tab" aria-controls="detail" aria-selected="false">Guia de tallas</a>
+            <a class="nav-link text-secondary" id="detail-tab" data-toggle="tab" href="#sizechart" role="tab" aria-controls="detail" aria-selected="false">Size Guide</a>
         </li>
         <!--
         <li class="nav-item">
@@ -100,11 +126,16 @@
         <div class="tab-pane border border-top-0 p-3" id="detail" role="tabpanel" aria-labelledby="detail-tab">
             <table class="table table-bordered mb-0 table-sm">
             <tbody>
-                <%= for {k, v} <- @product.detail do %>
-                <tr>
-                <td class="bg-light w-25"><%= k %></td>
-                <td><%= v %></td>
-                </tr>
+                <% case @product.detail do %>
+                    <% nil -> %>
+                    <% [] -> %>
+                    <% _ -> %>
+                        <%= for {k, v} <- @product.detail do %>
+                        <tr>
+                        <td class="bg-light w-25"><%= k %></td>
+                        <td><%= v %></td>
+                        </tr>
+                        <% end %>
                 <% end %>
                 
             </tbody>
